# RustIK

./: README.md  TODO.md
krust/: Cargo.toml  index.html
krust/src/: collision_handler.rs  genetics.rs  lib.rs  main.rs  matrices.rs  solver.rs  solver_ga.rs  solver_gd.rs  tests.rs  webassembly.rs
krust/tests/: collision_tests.rs  ga_solver_tests.rs  gd_solver_tests.rs  genetics_tests.rs  matrices_tests.rs  serialization_tests.rs  solver_tests.rs
runner/: Cargo.toml
runner/src/: main.rs
