[package]
name = "krust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = { version = "0.30.0", features = ["serde-serialize"] }
approx = "0.5.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
rayon = "1.6.1"
wasm-bindgen = "0.2"
ncollide3d = "0.33.0"
fxhash = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
panic = 'abort'